--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </ul>
         </div>
         <div class="content-container">
+            <div class="fade-out"></div>
             <div class="info-container">
                 
                 <div class="location"><h2></h2></div>
